# MPC

./: .gitignore  README.md
Ludvig/: Ass1.ipynb  L2.ipynb
Ludvig/L2/: Ass1.ipynb  L2.ipynb
Ludvig/L3/coco-project-main/: prefeedback.py  pyproject.toml  test.py
Ludvig/L3/coco-project-main/coco_rocket_lander/algs/: mpc.py
Ludvig/L3/coco-project-main/coco_rocket_lander/env/: rocketlander.py
Ludvig/L4/: L4_code.ipynb
Ludvig/L5/coco-project-main/: .gitignore  pyproject.toml  test.py
Ludvig/L5/coco-project-main/coco_rocket_lander/algs/: mpc.py  pid.py
Ludvig/L5/coco-project-main/coco_rocket_lander/env/: env_cfg.py  system_model.py
